--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -3,50 +3,50 @@
  * author: "Chris Kempson (http://chriskempson.com)"
  */
 body[kui-theme="Dark"] {
-    --color-base00: #13171A; /* Default Background */
-    --color-base01: #202529; /* Lighter Background (Used for status bars) */
-    --color-base02: #272C30; /* Selection Background */
-    --color-base03: #373D42; 
-    --color-base04: #565656; /* Dark Foreground (Used for status bars) */
-    --color-base05: #9FA5AD; /* Default Foreground, Caret, Delimiters, Operators */
-    --color-base06: #F2F4F8; /* Light Foreground (Not often used) */
-    --color-base07: #ffffff; /* Light Background (Not often used) */
-    --color-base08: #FB4B53; /* RED: Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted */
-    --color-base09: #de935f; /* ORANGE: Integers, Boolean, Constants, XML Attributes, Markup Link Url */
-    --color-base0A: #FDD13A; /* YELLOW: Classes, Markup Bold, Search Text Background */
-    --color-base0B: #3DBB61; /* GREEN: Strings, Inherited Class, Markup Code, Diff Inserted */
-    --color-base0C: #6CCAFF; /* CYAN: Support, Regular Expressions, Escape Characters, Markup Quotes */
-    --color-base0D: #1999b3; /* BLUE: Functions, Methods, Attribute IDs, Headings */
-    --color-base0E: #ffa0c2; /* MAGENTA: Keywords, Storage, Selector, Markup Italic, Diff Changed */
-    --color-base0F: #d0b0ff; /* BROWN: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
+  --color-base00: #13171a; /* Default Background */
+  --color-base01: #202529; /* Lighter Background (Used for status bars) */
+  --color-base02: #272c30; /* Selection Background */
+  --color-base03: #373d42;
+  --color-base04: #565656; /* Dark Foreground (Used for status bars) */
+  --color-base05: #9fa5ad; /* Default Foreground, Caret, Delimiters, Operators */
+  --color-base06: #f2f4f8; /* Light Foreground (Not often used) */
+  --color-base07: #ffffff; /* Light Background (Not often used) */
+  --color-base08: #fb4b53; /* RED: Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted */
+  --color-base09: #de935f; /* ORANGE: Integers, Boolean, Constants, XML Attributes, Markup Link Url */
+  --color-base0A: #fdd13a; /* YELLOW: Classes, Markup Bold, Search Text Background */
+  --color-base0B: #3dbb61; /* GREEN: Strings, Inherited Class, Markup Code, Diff Inserted */
+  --color-base0C: #6ccaff; /* CYAN: Support, Regular Expressions, Escape Characters, Markup Quotes */
+  --color-base0D: #1999b3; /* BLUE: Functions, Methods, Attribute IDs, Headings */
+  --color-base0E: #ffa0c2; /* MAGENTA: Keywords, Storage, Selector, Markup Italic, Diff Changed */
+  --color-base0F: #d0b0ff; /* BROWN: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
 
-    --color-table-border1: #616466;
-    --color-table-border2: #A5A9AD;
-    --color-table-border3: #383D40;
+  --color-table-border1: #616466;
+  --color-table-border2: #a5a9ad;
+  --color-table-border3: #383d40;
 
-    --color-sidecar-header: var(--color-base03);
-    --color-sidecar-border: #1A2024;
+  --color-sidecar-header: var(--color-base03);
+  --color-sidecar-border: #1a2024;
 
-    --color-stripe-01: #4F565C;
+  --color-stripe-01: #4f565c;
 
-    --color-selection-background: var(--color-base05);
+  --color-selection-background: var(--color-base05);
 
-    --color-light-red: hsla(357, 96%, 64%, 50%);
-    --color-light-green: hsla(134, 43%, 52%, 50%);
-    --color-light-yellow: hsla(46, 98%, 61%, 50%);
+  --color-light-red: hsla(357, 96%, 64%, 50%);
+  --color-light-green: hsla(134, 43%, 52%, 50%);
+  --color-light-yellow: hsla(46, 98%, 61%, 50%);
 
-    --color-content-divider: #418CFF;
-    --color-tag-beta-fill: #202529;
-    --color-tag-beta-text: var(--color-text-01);
+  --color-content-divider: #418cff;
+  --color-tag-beta-fill: #202529;
+  --color-tag-beta-text: var(--color-text-01);
 
-    --color-text-02: #B3BAC1;
+  --color-text-02: #b3bac1;
 
-    /* table header row */
-    --color-ui-06: #373D42;
+  /* table header row */
+  --color-ui-06: #373d42;
 }
 
 body[kui-theme="Dark"] .header-cell {
-    color: #D8DCE3
+  color: #d8dce3;
 }
 
 /* tomorrow-night hightlightjs theme */
