--- a/plugins/plugin-core-support/web/css/about.css
+++ b/plugins/plugin-core-support/web/css/about.css
@@ -1,67 +1,67 @@
 .about-window {
-    overflow: auto;
-    flex: 1;
+  overflow: auto;
+  flex: 1;
 }
 
 .about-window-long-description {
-    text-align: justify;
+  text-align: justify;
 }
 
 .about-window .logo {
-    display: flex;
+  display: flex;
 }
 .about-window .logo img {
-    float: left;
-    width: 8em;
-    height: 8em;
-    max-width: none;
-    margin-right: 1.5em;
-    transition: all .8s ease-in-out;
+  float: left;
+  width: 8em;
+  height: 8em;
+  max-width: none;
+  margin-right: 1.5em;
+  transition: all 0.8s ease-in-out;
 }
 .about-window .logo img:hover {
-    filter: brightness(1.1);
+  filter: brightness(1.1);
 }
 
 .xxabout-window .page-content {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .about-window-top-content {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    font-family: var(--font-sans-serif);
-    white-space: normal;
-    padding: 3em;
-    max-width: 50em;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  font-family: var(--font-sans-serif);
+  white-space: normal;
+  padding: 3em;
+  max-width: 50em;
 }
 
 .about-window-inside-content {
-    display: flex;
-    justify-content: space-between;
-    padding: 3em;
-    background: var(--color-base03);
+  display: flex;
+  justify-content: space-between;
+  padding: 3em;
+  background: var(--color-base03);
 }
 
 /* the middle content icon "stacks" */
 .about-window-icon-stack {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .about-window-icon-stack > div {
-    margin-top: 0.375em;
+  margin-top: 0.375em;
 }
 .about-window .about-window-inside-content a {
-    font-size: 3em;
-    color: var(--color-base05);
+  font-size: 3em;
+  color: var(--color-base05);
 }
 
 .about-window-bottom-content {
-    display: flex;
-    justify-content: center;
-    padding: 3em;
+  display: flex;
+  justify-content: center;
+  padding: 3em;
 }
 .about-window-bottom-content .log-lines {
-    width: calc(100% - 6em);
+  width: calc(100% - 6em);
 }
